# basejump

./: .gitignore  Makefile.am  README.md  configure.ac  fubar.lst  graphics.cfg  run.sh  sky.cfg
basejump/: sky.cfg
basejump/levels/default/: level.cfg  terrain.cfg
cl_programs/: particles.cl  particles_structs.cl
datapack/: datapack.h  main.c  pack.c  unpack.c
examples/: config_example.cfg
examples/blur/: blur.cpp
examples/blur/shaders/: split.frag
examples/debug/: terrain.cpp
examples/hdr/: hdr.cpp
examples/mrt/: mrt.cpp
examples/mrt/shaders/: mrt_test2.frag
examples/particles/: particles.cfg  particles.cpp
examples/shadowmaps/: shadowmaps.cpp
examples/terrain/: terrain.cfg  terrain.cpp
levels/default/: level.cfg  terrain.cfg
models/: bench.mtl  lyktstolpe2.mtl  teapot.mtl
models/nox2/: tunnel.mtl
msvc/: basejump.filters  basejump.vcxproj  basejump.vcxproj.filters  compat.hpp  config.h  crt.hpp  libfrob.sln  libfrob.vcxproj  libfrob.vcxproj.filters  nox2.vcxproj  nox2.vcxproj.filters  nx15.vcxproj  nx15.vcxproj.filters
nx15/: blendmix.frag  cam.txt  craptastic.xcf  logo.frag  look_at.txt  particles.cfg  rocket.blend  rocket.mtl  terrain.xcf
shaders/: blend.frag  blood.frag  blur.frag  blur_horizontal.frag  blur_temporal.frag  blur_vertical.frag  bright_filter.frag  debug.vert  depth.frag  distort.frag  dof.frag  extensions.glsl  filmgrain.frag  fog.glsl  hologram.frag  hologram.vert  light_calculations.glsl  loading.frag  loading.vert  modelviewer.frag  modelviewer.vert  mrt_test1.frag  mrt_test2.frag  normal.frag  normal.vert  noshading.frag  noshading.vert  particles.frag  passthru.frag  screenspace.glsl  shadowmap.frag  shadowmap.vert  simple.frag  simple.vert  sky.frag  sky.glsl  sky.vert  skybox.frag  skybox.vert  terrain.frag  (+5 more)
src/: Controller.cpp  Controller.hpp  GLDebugDrawer.cpp  GLDebugDrawer.hpp  Kinect.cpp  Kinect.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Prng.hpp  Protagonist.cpp  Protagonist.hpp  XboxController.cpp  XboxController.h  aabb.cpp  aabb.hpp  aabb2d.cpp  aabb2d.hpp  basejump.cpp  camera.cpp  camera.hpp  cl.cpp  cl.hpp  color.cpp  color.hpp  config.cpp  config.hpp  cube_vertices.hpp  data.cpp  data.hpp  debug_mesh.cpp  debug_mesh.hpp  edison.cpp  engine.cpp  engine.hpp  font.cpp  forward.hpp  game.cpp  game.hpp  globals.cpp  globals.hpp  (+65 more)
src/editor/: editor.hpp
src/scene/: nox.cpp  particles.cpp  test.cpp  tunnel.cpp  tv.cpp  water.cpp  winter.cpp
src/techniques/: blur.cpp  blur.hpp  dof.cpp  dof.hpp  hdr.cpp  hdr.hpp  temporalblur.cpp  temporalblur.hpp
test/: aabb.cpp  asserts.hpp  data.cpp  quadtree.cpp  utils.cpp
